core module added

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,5 +14,11 @@
   "exclude": [
     "src/test.ts",
     "src/**/*.spec.ts"
-  ]
+  ],
+  "baseUrl": "./src",
+  "paths": {
+    "@agh/model": [
+      "app/@core/data/"
+    ]
+  },
 }
