--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Docker/Dockerfile
     volumes:
-      - '.:/app'
+      - './:/app'
       - '/app/node_modules'
     ports:
       - '4200:4200'
